<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewNameValue"
            android:layout_width="116dp"
            android:layout_height="26dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:text="@string/age"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewAgeValue"
            android:layout_width="116dp"
            android:layout_height="26dp"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/backHome" />
</LinearLayout>